--- a/views/results.ejs
+++ b/views/results.ejs
@@ -7,13 +7,12 @@
 </head>
 <body>
     <h1>Results</h1>
-    <% recipes.results.forEach(recipe => { %>
-        <div>
-            <h2><%= recipe.title %></h2>
-            <img src="<%= recipe.image %>" alt="">
-            <p><%= recipe.summary %></p>
-            <a href="<%= recipe.sourceUrl %>">View Recipe</a>
-        </div>
+    <!-- Recover the recipes recovered from index.js, and render them in this page -->
+    <% recipes.forEach(recipe => { %>
+        <h2><%= recipe.title %></h2>
+        <p><%= recipe.ingredients %></p>
+        <p><%= recipe.href %></p>
+        <img src="<%= recipe.thumbnail %>">
     <% }) %>
 </body>
 </html>
