--- a/forkly-frontend/src/components/NavbarStyles.css
+++ b/forkly-frontend/src/components/NavbarStyles.css
@@ -1,6 +1,10 @@
+@font-face {
+    font-family: font1;
+    src: url(./fonts/MilkyMania.ttf);
+}
+
 .navbar {
     width: 100%;
-    background-color: rgba(0,0,0,0.2);
     overflow: hidden;
 }
 
@@ -9,61 +13,31 @@
     font-size: 16px;
     color: white;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none;
 }
 
-.navbar a .site-title {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.dropdown {
+.topnav-right {
     float: right;
-    overflow: hidden;
+    margin: 0px 10px;
 }
 
-.dropdown .dropbutton {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbutton {
+.topnav-right a {
+    font-family: font1;
+    padding: 10px 30px;
+    margin: 20px 10px;
+    border: 3px solid #32A3EF;
+    border-radius: 20px;
+    color: #32A3EF;
+    transition-duration: 0.4s;
     background-color: white;
 }
 
-.dropcontent {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-  
-.dropcontent a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: right;
-}
-  
-.dropcontent a:hover {
-    background-color: #ddd;
+.topnav-right a:hover {
+    background-color: #32A3EF;
+    color: white;
   }
-  
-.dropdown:hover .dropcontent {
-    display: block;
+
+.topnav-left {
+    padding: 10px 30px;
+    float: left;
 }
